# lib/api-spec/openapi.yaml
@@ -477,6 +477,10 @@ components:
           type: ["string", "null"]
         email:
           type: ["string", "null"]
+        companyId:
+          type: ["string", "null"]
+        deliveryAddress:
+          type: ["string", "null"]
         createdAt:
           type: string
           format: date-time
@@ -493,6 +497,10 @@ components:
         phone:
           type: string
         email:
+          type: string
+        companyId:
+          type: string
+        deliveryAddress:
           type: string
 
     Product:
